kustomize-units/kyverno-policies/check-image.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-image
spec:
  validationFailureAction: ${SIG_MGMT}
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: check-image
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
        - imageReferences:
          - quay.io/keycloak/keycloak*
          - hashicorp/vault*
          - ghcr.io/banzaicloud/*
          repository: ${SIG_REPO}
          mutateDigest: ${DIGEST}
          verifyDigest: ${DIGEST}
          required: ${DIGEST}
          attestors:
          - entries:
            - keys:
                publicKeys: |-
                  -----BEGIN PUBLIC KEY-----
                  MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEcuuLszwy0u7y394KY6GW1BgjfaU6
[...]
                  -----END PUBLIC KEY-----
