kustomize-units/kyverno-policies/disable-automount-sa.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disable-automountserviceaccounttoken
  annotations:
    policies.kyverno.io/title: Disable automountServiceAccountToken
    policies.kyverno.io/category: Other, EKS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: ServiceAccount
    kyverno.io/kyverno-version: 1.6.0
    policies.kyverno.io/minversion: 1.6.0
    kyverno.io/kubernetes-version: "1.21"
    policies.kyverno.io/description: >-
      Apply CIS benckmark rule 5.1.5: The default service account should not be used
      to ensure that rights granted to applications can be more easily audited and reviewed.
      Where access to the Kubernetes API from a pod is required, a specific service account should be created for that pod,
      and rights granted to that service account. The default service account should be configured such that it does not provide
      a service account token and does not have any explicit rights assignments.
spec:
  rules:
  - name: disable-automountserviceaccounttoken
    match:
      any:
      - resources:
          kinds:
          - ServiceAccount
          names:
          - default
    mutate:
      patchStrategicMerge:
        automountServiceAccountToken: false
